step#3 - goodbye bowling...! 최고의 공부였습니다 있는 조건에서 문제 해결하기(하나의 문제를 해결하려고 새로운 것부터 만들려고 하지말자를 배웠습니다)